Necessary alterations
